Fix responsive styling on small screens.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .Header { max-width: 1000px; padding: 1rem; margin: 0 auto; }
 .Header { margin-top: 4rem; margin-bottom: 3rem; color: rgba(255, 255, 255, .9); text-shadow: 1px 1px 30px black; }
-.Header > h1 { font-size: 4.5rem; font-weight: 600; }
+.Header > h1 { font-size: 15vw; font-weight: 600; }
 .Header > div.tagline { font-size: 1.1rem; margin-left: .4rem; margin-bottom: 1rem; }
 .Header > div.tagline > p { margin: .3rem 0; }
 .Value { font-size: 2rem; }
@@ -23,7 +23,7 @@
 .Work { background-color: #000; color: #fff; }
 .Work > section { padding-top: 3rem; }
 .Work > section > div.projects { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-flow: wrap; flex-flow: wrap; -ms-flex-pack: distribute; justify-content: space-around; }
-.Work > section > div.projects > div.project { -ms-flex-preferred-size: 25%; flex-basis: 25%; min-width: 110px; margin-bottom: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.Work > section > div.projects > div.project { min-width: 110px; margin-bottom: 2rem; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .Work > section > div.projects > div.project > a img { width: 140px; height: 140px; }
 .Work > section > div.projects > div.project > ul { margin-left: -2rem; }
 .Services { background: #fff; color: #000; padding: 2rem 0 6rem; }
@@ -40,18 +40,17 @@
 .About > section { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-flow: wrap; flex-flow: wrap; -ms-flex-pack: distribute; justify-content: space-around; }
 .About { background-color: #000; color: #fff; }
 .About > section { padding-top: 3rem; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
-.About > section > div { -ms-flex-preferred-size: 33%; flex-basis: 33%; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.About > section > div { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 .About > section > div > img { width: 200px; height: 200px; margin: 0rem 0.5rem; margin-bottom: 1rem; }
 .About > section > div > div.social-links { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: end; -ms-flex-align: end; align-items: flex-end; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; width: 100%; }
-.About > section > div > div.social-links > a { -ms-flex-preferred-size: 18%; flex-basis: 18%; }
 .About > section > div > div.social-links > a > img { height: 36px; margin-bottom: 1rem; }
 .Footer { background: #fff; color: #000; padding: 2rem 0 6rem; }
 .Footer > header { max-width: 1000px; padding: 1rem; margin: 0 auto; }
 .Footer > header { font-family: Montserrat; font-size: 2.5rem; font-weight: 600; text-align: center; }
 .Footer > section { max-width: 1000px; padding: 1rem; margin: 0 auto; }
 .Footer > section { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-flow: wrap; flex-flow: wrap; -ms-flex-pack: distribute; justify-content: space-around; }
-.Footer > section p { -ms-flex-preferred-size: 100%; flex-basis: 100%; font-size: 1.4rem; text-align: center; }
-.Footer > section p > a { font-size: 2rem; }
+.Footer > section p { font-size: 1.4rem; text-align: center; }
+.Footer > section p > a { font-size: 7vw; }
 body { background: url("images/radiolarians.jpg") no-repeat; background-position: calc(50% + 300px) -12rem; background-color: #000; font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 15px; margin: 0; }
 h1, h2, h3, h4 { font-family: Montserrat; margin-bottom: .5rem; font-weight: 500; }
 a { color: #000; }
